--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
         "php": "^7.2",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "Esler\\": ["src/"]
+        }
     }
 }
