--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "psr-4": {
             "Esler\\": ["src/"]
         }
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.3"
     }
 }
