--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "require": {
         "php": "^7.1",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "^6.3",
-        "phpunit/phpunit": "^7.0"
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
@@ -21,6 +20,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.3",
-        "phpstan/phpstan": "^0.10.3"
+        "phpstan/phpstan": "^0.10.3",
+        "phpunit/phpunit": "^9.0"
     }
 }
