--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.1||^8.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.0||^7.0"
     },
@@ -20,7 +20,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.3",
-        "phpstan/phpstan": "^0.10.3",
+        "phpstan/phpstan": "^0.12.64",
         "phpunit/phpunit": "^9.0"
     }
 }
